k8s/django/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: django
        image: 127.0.0.1:5000/django:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
#        env:
#        - name: POSTGRES_USER
#          valueFrom:
#            secretKeyRef:
#              name: postgres-secret
#              key: database-user
#        - name: POSTGRES_PASSWORD
#          valueFrom:
#            secretKeyRef:
#              name: postgres-secret
#              key: database-password

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
  selector:
    app: django
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8001
    protocol: TCP
